Progalap beadandó és OEP 1. szorgalmi

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,9 @@
         "fstream": "cpp",
         "vector": "cpp",
         "xutility": "cpp",
-        "iostream": "cpp"
-    }
+        "iostream": "cpp",
+        "istream": "cpp",
+        "iosfwd": "cpp"
+    },
+    "python.pythonPath": "C:\\Users\\kgerg\\AppData\\Local\\Programs\\Python\\Python38-32\\python.exe"
 }
